--- a/macros.cfg
+++ b/macros.cfg
@@ -39,7 +39,7 @@ gcode:
     #Parameters
     {% set s = params.S|float %}
 
-    # M104 {% for p in params %}{'%s%s' % (p, params[p])}{% endfor %}  ; Set hotend temp
+    M104 {% for p in params %}{'%s%s' % (p, params[p])}{% endfor %}  ; Set hotend temp
     {% if s != 0 %}
         TEMPERATURE_WAIT SENSOR=extruder MINIMUM={s} MAXIMUM={s+1}   ; Wait for hotend temp (within 1 degree)
     {% endif %}
@@ -212,7 +212,6 @@ gcode:
 	PAUSE
 
 
-
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
@@ -236,10 +235,9 @@ gcode:
         G90                                                                                  ; absolute positioning
         G1 X{printer.toolhead.axis_maximum.x/2} Y{printer.toolhead.axis_minimum.y+5} F6000   ; park toolhead at front center
         SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
-        # M104 S0                                                                            ; turn off hotend, disabled due to not working on my device.. breaks pause/resume
+        M104 S0                                                                            ; turn off hotend, disabled due to not working on my device.. breaks pause/resume
         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
     {% endif %}
-
 
 
 [gcode_macro RESUME]
@@ -274,7 +272,6 @@ rename_existing: BASE_CANCEL_PRINT
 gcode:
     SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout} ; set timeout back to configured value
     CLEAR_PAUSE
-    # SDCARD_RESET_FILE
     PRINT_END
     BASE_CANCEL_PRINT
 
